tests/snapshots/regression/collections__empty_and_singleton.snap
---
source: tests/integration/regression_snapshots.rs
assertion_line: 132
---
$ flux --no-cache tests/fixtures/collections/empty_and_singleton.flx
exit_code: 1

[ 1 of 11] Compiling  Assert
[ 2 of 11] Compiling  Array
[ 3 of 11] Compiling  List
[ 4 of 11] Compiling  Either
[ 5 of 11] Compiling  IO
[ 6 of 11] Compiling  Math
[ 7 of 11] Compiling  Numeric
[ 8 of 11] Compiling  Option
[ 9 of 11] Compiling  Primops
[10 of 11] Compiling  String
• 5 errors • tests/fixtures/collections/empty_and_singleton.flx
error[E430]: Any Type Inferred

Core definition `0` has an unresolved type variable (var #10594) in its HM-inferred result type at the backend representation. The static typing contract requires every Core-visible boundary to be concrete before backend lowering.

  tests/fixtures/collections/empty_and_singleton.flx:1:1
  |
1 | [];
  | ^^^

Hint:
  Add a type annotation or adjust the definition so inference fully resolves its result type.


error[E430]: Any Type Inferred

Core definition `0` has an unresolved type variable (var #10596) in its HM-inferred result type at the backend representation. The static typing contract requires every Core-visible boundary to be concrete before backend lowering.

  tests/fixtures/collections/empty_and_singleton.flx:3:1
  |
3 | f();
  | ^^^^

Hint:
  Add a type annotation or adjust the definition so inference fully resolves its result type.


error[E004]: Undefined Variable

I can't find a value named `f`.

  tests/fixtures/collections/empty_and_singleton.flx:3:1
  |
3 | f();
  | ^

Hint:
  Define it first: let f = ...;

Help:
  Did you mean one of: `Flow.Math.pi`, `Flow.List.all`, `Flow.List.any`?


error[E430]: Any Type Inferred

Core definition `0` has an unresolved type variable (var #10598) in its HM-inferred result type at the backend representation. The static typing contract requires every Core-visible boundary to be concrete before backend lowering.

  tests/fixtures/collections/empty_and_singleton.flx:4:1
  |
4 | f(1);
  | ^^^^^

Hint:
  Add a type annotation or adjust the definition so inference fully resolves its result type.


error[E004]: Undefined Variable

I can't find a value named `f`.

  tests/fixtures/collections/empty_and_singleton.flx:4:1
  |
4 | f(1);
  | ^

Hint:
  Define it first: let f = ...;

Help:
  Did you mean one of: `Flow.Math.pi`, `Flow.List.all`, `Flow.List.any`?

Found 5 errors.
